<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_dashboard">
    
    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.rammzexpensetracker.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.example.rammzexpensetracker.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_expenses"
        android:name="com.example.rammzexpensetracker.ui.expenses.ExpensesFragment"
        android:label="@string/title_expenses"
        tools:layout="@layout/fragment_expenses" />

    <fragment
        android:id="@+id/navigation_sharing"
        android:name="com.example.rammzexpensetracker.ui.sharing.SharingFragment"
        android:label="@string/title_sharing"
        tools:layout="@layout/fragment_sharing" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.example.rammzexpensetracker.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />
</navigation>