<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <!--
    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home"
        android:background="@drawable/selected_item_background" />
    -->

    <item
        android:id="@+id/navigation_dashboard"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/title_dashboard"
        android:background="@drawable/selected_item_background" />

    <item
        android:id="@+id/navigation_expenses"
        android:icon="@drawable/ic_expenses_icon"
        android:title="@string/title_expenses"
        android:background="@drawable/selected_item_background" />

    <item
        android:id="@+id/navigation_sharing"
        android:icon="@drawable/ic_sharing_icon"
        android:title="@string/title_sharing"
        android:background="@drawable/selected_item_background" />

    <!--
    <item
        android:id="@+id/navigation_notifications"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_notifications"
        android:background="@drawable/selected_item_background" />
    -->
</menu>
